desafio1 en archivo html y un archivo vacio de js para demostrar que se puede linkear en el head

--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="test.js">
 </head>
 <body>
-    
+    <script>
+        let number=15;
+        /*let num2=0;*/
+
+        let nombre=prompt("ingrese su nombre");
+        alert("hola "+ nombre + " !")
+        num2=parseInt(prompt("ingrese su numero"))
+        let resultado=number+num2;
+        alert("si los sumas a 15 da "+ resultado)
+        alert("ahora para concatenar apriete aceptar")
+        let concat1=prompt("ingrese un string ")
+        let concat2=prompt("ingrese string 2 ")
+        alert("su cadena es "+ concat1 +concat2)
+
+
+
+
+
+
+    </script>    
 </body>
 </html>
