--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
    <script src="js/main.js"></script>
 </head>
 <body>
-        <h1>simulador de cuotas</h1>
+        <h1>filtro arrays</h1>
 </body>
 </html>
